
2003-12-26  Mike Kestner  <mkestner@ximian.com>

	* glue/selectiondata.c : new glue to make SelectionData opaque
	* glue/Makefile.am : add file
	* glue/makefile.win32 : add file
	* gtk/Gtk.metadata : mark SelectionData opaque, unhide Set method
	* gtk/SelectionData.custom : invoke glue methods for opaque fields.
	* gtk/gtk-api.xml : regen
	* sample/TestDnd.cs : update to new SelectionData API.

2003-12-21  John Luke  <jluke@cfl.rr.com>

	* glib/Idle.cs: add Remove method found in Alp Toker's platano
	
2003-12-16  Joe Shaw  <joe@ximian.com>

	* generator/SymbolTable.cs (MangleName): Add "lock" and "callback"
	to the list of names that need to be mangled.  The former is a C#
	reserved keyword and the latter is already used as an argument to
	methods which marshal callbacks.

2003-12-15  Mike Kestner  <mkestner@ximian.com>

	* generator/BoxedGen.cs : s/uint/GLib.GType
	* generator/ManualGen.cs : add a ctor to pass ToNative handle name
	* generator/ObjectGen.cs : s/uint/GLib.GType
	* generator/Signal.cs : use GLib.GType and call OverrideVirtualMethod
	* generator/SymbolTable.cs : make GType a ManualGen and update a few
	ManualGens to the new signatures.
	* glib/DefaultSignalHandler.cs : s/Type/System.Type
	* glib/ManagedValue.cs : s/uint/GLib.GType
	* glib/Object.cs : s/uint/GLib.GType, add OverrideVirtualMethod.
	* glib/Type.cs : s/uint/IntPtr, add static fields for fundamentals.
	make it a value type and add ==, !=, Equals, and GetHashCode.
	* glib/TypeConverter.cs : use new GType statics, not fundamentals.
	* glib/Value.cs : use new GType statics, not fundamentals.
	* gnome/*.custom : s/uint/GLib.GType
	* gtk/*Store.custom : use GType statics, not fundamentals.
	* sample/Subclass.cs : s/uint/GLib.GType.

2003-12-12  Mike Kestner  <mkestner@ximian.com>

	* generator/CallbackGen.cs : kill some redundant generation
	* generator/MethodBody.cs : pass array parameters as arrays of
	the corresponding native type.

2003-12-12  Mike Kestner  <mkestner@ximian.com>
