@@ -4041,7 +4041,7 @@
         </parameters>
       </method>
     </object>
-    <object name="Label" cname="GtkLabel" parent="GtkMisc">
+    <object name="Label" cname="GtkLabel" parent="GtkMisc" disabledefaultconstructor="1">
       <field cname="label" type="gchar*" />
       <field cname="jtype" bits="2" type="guint" />
       <field cname="wrap" bits="1" type="guint" />
@@ -4139,12 +4139,12 @@
       <method name="GetUseUnderline" cname="gtk_label_get_use_underline">
         <return-type type="gboolean" />
       </method>
-      <constructor cname="gtk_label_new" preferred="1">
+      <constructor cname="gtk_label_new">
         <parameters>
           <parameter type="const-char*" name="str" />
         </parameters>
       </constructor>
-      <constructor cname="gtk_label_new_with_mnemonic">
+      <constructor cname="gtk_label_new_with_mnemonic" preferred="1">
         <parameters>
           <parameter type="const-char*" name="str" />
         </parameters>
